--- a/view/css/Página-Inicial.css
+++ b/view/css/Página-Inicial.css
@@ -256,6 +256,18 @@
   font-size: 2.25rem;
 }
 
+label{
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+h4{
+  font-size: 20pt;
+}
+li{
+  font-size: 14pt;
+}
+
 .u-section-2 .u-text-4 {
   margin-left: 0;
   margin-bottom: 0;
